--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -2,6 +2,10 @@
 
 /* kl red - rgb(151, 0, 3); */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -23,4 +27,9 @@
 }
 .four img {
   width: 100%;
+}
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
 }
