--- a/my-app/src/app/(pages)/admin/clubUpdate/lead/page.css
+++ b/my-app/src/app/(pages)/admin/clubUpdate/lead/page.css
@@ -45,20 +45,20 @@
     appearance: none;
 }
 
-.UpdateClubLeadComponent-two-b, .UpdateClubLeadComponent-two-c{
+.UpdateClubLeadComponent-two-b {
     display: flex;
-    padding-top: 1rem;
+    padding: 1rem 0rem;
     width: 100%;
 }
 
-.UpdateClubLeadComponent-two-b-box, .UpdateClubLeadComponent-two-c-box{
+.UpdateClubLeadComponent-two-b-box {
     width: 32%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
-.UpdateClubLeadComponent-two-b input, .UpdateClubLeadComponent-two-c-box input{
+.UpdateClubLeadComponent-two-b input {
     width: 90%;
     padding: 0.8rem;
     border: 0.1px solid gray;
