--- a/my-app/src/app/(pages)/clubRegistration/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/page.css
@@ -22,7 +22,7 @@
     margin: auto;
     padding: 1rem;
     border-radius: 20px;
-    height: 90vh;
+    height: 86vh;
     overflow: scroll;
     display: flex;
     flex-direction: column;
@@ -228,6 +228,8 @@
 
 .cr-seven-in-two {
     width: 30%;
+    display: flex;
+    align-items: flex-end;
 }
 
 .cr-seven-in-two button {
@@ -239,4 +241,43 @@
     background-color: black;
     color: white;
     cursor: pointer;
+}
+
+.custom-file-input {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 6vh;
+  border: 2px dashed rgb(0, 166, 255);
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.custom-file-input.file-added {
+  border-color: green;
+}
+
+.custom-file-input input[type="file"] {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.custom-file-input span {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  height: 100%;
+  color: #999;
+  font-size: 1rem;
+}
+
+.custom-file-input.file-added span {
+  color: green;
 }
