--- a/my-app/src/app/(pages)/admin/Members/addMembers/page.css
+++ b/my-app/src/app/(pages)/admin/Members/addMembers/page.css
@@ -96,13 +96,18 @@
   cursor: pointer;
 }
 
+#final-two{
+    width: 32%;
+}
+
 #final-three{
+    width: 10%;
     padding-top: .3rem;
 }
 
 #final-three button{
     width: 100%;
-    padding: .5rem 1rem;
+    padding: .8rem 1rem;
     background-color: black;
     color: white;
     border: none;
@@ -112,4 +117,42 @@
 #final-three button:hover{
     background-color: rgb(0, 147, 0);
     cursor: pointer;
+}
+
+.custom-file-input {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: 6vh;
+    border: 2px dashed rgb(0, 166, 255);
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+  }
+
+.custom-file-input.file-added {
+    border-color: green;
+}
+
+.custom-file-input input[type="file"] {
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.custom-file-input span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    color: #999;
+    font-size: 1rem;
+}
+
+.custom-file-input.file-added span {
+    color: green;
 }
