--- a/my-app/src/app/(pages)/clubRegistration/components/courseDetails/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/components/courseDetails/page.css
@@ -7,31 +7,31 @@
 }
 
 .Course-one {
-    width: 90%;
-    height: 90vh;
-    margin: auto;
+    width: 100%;
 }
 
 .Course-one-in {
     width: 100%;
-    height: 90vh;
-    overflow: scroll;
 }
 
 .Course-one-one {
     width: 100%;
-    padding: 1em;
-    text-align: center;
+    text-align: left;
 }
 
 .Course-one-one h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 600;
+}
+
+.Course-one-one p {
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .Course-one-two {
     width: 100%;
-    padding: 1em;
+    padding: 1em .5rem;
 }
 
 .Course-one-two-in {
