--- a/my-app/src/app/(pages)/clubRegistration/components/rules/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/components/rules/page.css
@@ -18,6 +18,7 @@
 .rc-one p {
     font-size: 1rem;
     font-weight: 400;
+    color: rgb(102, 102, 102);
 }
 
 .rc-two {
@@ -26,16 +27,27 @@
 
 .rc-two-in {
     width: 100%;
-    padding: 1rem 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 1rem;
 }
 
 .rc-two-in p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 400;
     padding: .5rem 0rem;
+    gap: .5rem;
 }
 
 .rc-three {
     width: 100%;
     display: flex;
+    padding: 1rem;
 }
 
 .rc-three input {
