--- a/my-app/src/app/(pages)/clubRegistration/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/page.css
@@ -50,10 +50,11 @@
 
 .cr-one {
   width: 100%;
-  height: 18vh;
+  height: 12vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: 1px solid rgb(229, 227, 227);
 }
 
 .cr-one-in {
@@ -62,20 +63,19 @@
 
 .cr-two {
   width: 100%;
-  height: 68vh;
+  height: 74vh;
 }
 
 .cr-two-in {
   width: 100%;
-  overflow: scroll;
-  border-top: 1px solid rgb(229, 227, 227);
 }
 
 .cr-two-one {
   width: 100%;
-  height: 60vh;
+  height: 68vh;
   display: flex;
   padding: 1rem 0rem;
+  overflow: scroll;
 }
 
 .cr-two-two {
