--- a/my-app/src/app/(pages)/components/footer/page.css
+++ b/my-app/src/app/(pages)/components/footer/page.css
@@ -17,3 +17,15 @@
     font-size: .8rem;
     color: white;
 }
+
+@media screen and (max-width: 600px) {
+
+    .AdminFooterComponent-in {
+        padding: 1rem;
+    }
+
+    .AdminFooterComponent-in p {
+        font-size: .6rem;
+        text-align: center;
+    }
+}
