--- a/my-app/src/app/(pages)/clubRegistration/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/page.css
@@ -80,8 +80,9 @@
 
 .cr-two-two {
   width: 100%;
-  height: 6vh;
+  height: 8vh;
   display: flex;
+  padding-top: 1rem;
   justify-content: flex-end;
   gap: 1rem;
 }
