--- a/my-app/src/app/(pages)/clubRegistration/components/courseDetails/page.css
+++ b/my-app/src/app/(pages)/clubRegistration/components/courseDetails/page.css
@@ -75,9 +75,9 @@
 }
 
 .Domain-name p {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
-    color: #333;
+    color: rgb(151, 0, 3);
 }
 
 .Domain-toggle svg {
@@ -105,7 +105,7 @@
 }
 
 .Club-name h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
     color: #555;
 }
@@ -157,7 +157,7 @@
 
     .Domain-name p, 
     .Club-name h3 {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .Course-table-container th, 
